# solver-cli

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENTS.md  Makefile  README.md  docker-compose.yml  mvp.sh  ofac_diff.md  plan.md  pnpm-workspace.yaml
.claude/: settings.json
.continue/: config.yaml
.github/workflows/: rust.yml
.solver/: state.json
centralized-settlement/: Cargo.toml
centralized-settlement/src/: centralized.rs  lib.rs
config/: solver.toml  solver.yaml
docs/: 3-chain-quickstart.md  add-chain-sepolia.md  aggregator.md  aws-kms-key-import.md  deploy-new-token.md  deploy-testnet.md  gcp-kms-signer.md  hyperlane-relayer.md  multi-chain-setup.md  ofac-enforcement.md  solve-existing-tokens.md
frontend/: .env.sample  .eslintrc.json  .firebaserc  .gitignore  .prettierignore  .prettierrc  firebase.json  index.html  next.config.mjs  package-lock.json  package.json  server.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/server/: chains.ts  index.ts
frontend/src/: App.tsx  Docs.tsx  api.ts  index.css  main.tsx  wallet.ts
frontend/src/app/: error.tsx  layout.tsx  not-found.tsx
frontend/src/app/(main)/: layout.tsx  page.tsx
frontend/src/components/: app-wrapper.tsx  arcadia-card.tsx  connect-wallet-button.tsx  onboarding-guard.tsx
frontend/src/components/dynamic-sheet/: dialog.tsx  popover.tsx
frontend/src/components/icons/: bridge.tsx  home.tsx  portfolio.tsx  search.tsx  trade.tsx  vault.tsx  wallet.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  checkbox.tsx  dialog.tsx  drawer.tsx  glowing-effect.tsx  input.tsx  popover.tsx  separator.tsx  sidebar.tsx  skeleton.tsx  table.tsx  tabs.tsx  tooltip.tsx  truncate-text.tsx
frontend/src/components/vault-widget/: index.tsx
frontend/src/connect-kit/: index.ts  utils.ts  wallet-data.ts
frontend/src/connect-kit/components/: all-wallet-list-item.tsx  all-wallets.tsx  async-avatar-image.tsx  connected-mobile.tsx  connecting-wallet-dialog.tsx  cosmos-wallet-list-item.tsx  cosmos-wallets.tsx  evm-wallet-list-item.tsx  evm-wallets.tsx  select-ecosystem-dialog.tsx  solana-wallet-list-item.tsx  solana-wallets.tsx  switch-wallet-dialog.tsx  use-disconnect.ts  wallet-list-item.tsx
frontend/src/connect-kit/constants/: cosmos.ts  evm.ts  index.ts  solana.ts  walletconnect.ts
frontend/src/connect-kit/core/: cosmos.ts  evm.ts  get-supported-chains.ts  solana.ts
frontend/src/connect-kit/hooks/: use-cosmos-wallets.ts  use-evm-wallets.ts  use-solana-wallets.ts
frontend/src/contexts/: wallet-connect.tsx
frontend/src/fonts/: index.ts
frontend/src/hooks/: use-balances.ts  use-ecosystem-wallets.ts  use-is-mobile-device.ts  use-is-mobile-view.ts  use-tab-indicator-pos.ts  use-vault-data.ts  use-vault-table.ts
frontend/src/icons/: external-link.tsx  index.tsx
frontend/src/lib/: query-client.ts  transfer-api.ts  types.ts  utils.ts  vault-utils.ts
frontend/src/store/: onboarding.ts  wallet-connect.ts
frontend/src/styles/: globals.css
frontend/src/utils/: dapp-detect.ts  links.ts  routes.ts
frontend/widget/: .gitignore  INTEGRATION.md  package.json  tsconfig.json  vite.config.ts
frontend/widget/src/: index.ts  vite-env.d.ts  widget.tsx
hyperlane/: Dockerfile  go.mod  go.sum  hyperlane-addresses.json  hyperlane-cosmosnative.json  relayer-config.json
hyperlane/cmd/hyp/: main.go
hyperlane/configs/: core-config.yaml  warp-config-sepolia.yaml  warp-config-usdt.yaml  warp-config.yaml-e
hyperlane/contracts/: MockERC20.sol
hyperlane/registry/strategies/: default-strategy.yaml
hyperlane/scripts/: docker-entrypoint.sh
oif/oif-contracts/: foundry.toml
oif/oif-contracts/cache/: solidity-files-cache.json
oif/oif-contracts/script/: Deploy.s.sol  DeployPermit2.s.sol  SubmitOrder.s.sol
oif/oif-solver/: Cargo.toml
oif/oif-solver/.oif-demo/: session.json
oif/oif-solver/config/: demo.toml
oracle-operator/: Cargo.toml  README.md  mainnet.md
oracle-operator/logs/oracle/: oracle.log.2026-02-09
oracle-operator/src/: config.rs  main.rs  operator.rs  signer.rs  state.rs
rebalancer/: Cargo.toml  SIGNER_INTEGRATION_PLAN.md  SPEC.md
rebalancer/src/: balance.rs  client.rs  config.rs  forwarding.rs  hyperlane.rs  lib.rs  main.rs  planner.rs  service.rs  signer.rs  state.rs
rebalancer/src/bridge/: hyperlane_warp.rs  mod.rs
scripts/: bech32_to_bytes32.py  common.sh  convert_address.py  convert_to_interop.sh  deploy_permit2.sh  generate-frontend-config.sh  setup.sh  start-frontend.sh  start-network.sh  start-services.sh  test_orders_e2e.sh
scripts/systemd/: oif-aggregator.service  oif-frontend-api.service  oif-frontend.service  oif-oracle.service  oif-rebalancer.service  oif-solver.service  oif.target
solver-cli/: Cargo.toml  README.md
solver-cli/.solver/: state.json
solver-cli/src/: main.rs
solver-cli/src/chain/: client.rs  contracts.rs  mod.rs
solver-cli/src/commands/: account.rs  balances.rs  chain.rs  configure.rs  deploy.rs  deploy_permit2.rs  fund.rs  init.rs  intent.rs  mod.rs  ofac.rs  order.rs  rebalancer.rs  solver.rs  token.rs  verify.rs
solver-cli/src/deployment/: deployer.rs  forge.rs  mod.rs
solver-cli/src/rebalancer/: config_gen.rs  mod.rs
solver-cli/src/server/: mod.rs  signature_validator.rs
solver-cli/src/server/apis/: auth.rs  order.rs  tokens.rs
solver-cli/src/server/apis/quote/: custody.rs  generation.rs  mod.rs  registry.rs  validation.rs
solver-cli/src/server/apis/quote/signing/: mod.rs
solver-cli/src/server/apis/quote/signing/payloads/: permit2.rs
solver-cli/src/server/auth/: middleware.rs  mod.rs
solver-cli/src/server/eip712/: mod.rs
solver-cli/src/server/eip712/compact/: mod.rs
solver-cli/src/solver/: centralized.rs  config_gen.rs  delivery.rs  engine.rs  mod.rs  runner.rs
solver-cli/src/state/: mod.rs  state_file.rs  types.rs
solver-cli/src/utils/: env.rs  mod.rs  output.rs
solver-runner/: Cargo.toml
solver-runner/src/: main.rs
solver-settlement/: Cargo.toml
solver-settlement/src/: centralized.rs  lib.rs
testnet/celestia-app/: init.sh
testnet/celestia-node/: init.sh
(+379 files in other folders)
