[package]
name = "oracle-operator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"

# Ethereum
alloy = { version = "0.8", features = [
    "full",
    "node-bindings",
    "signer-local",
] }
alloy-primitives = "0.8"
alloy-provider = { version = "0.8", features = ["ws"] }
alloy-signer = "0.8"
alloy-signer-local = "0.8"
alloy-sol-types = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Crypto
sha3 = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# HTTP (used by alloy transport; needed for provider type alias)
reqwest = "0.12"

# Utils
hex = "0.4"
