[package]
name = "oracle-operator"
version = "0.1.0"
edition = "2021"

[dependencies]

# Ethereum
alloy = { version = "0.8", features = [
    "full",
    "node-bindings",
    "signer-local",
    "signer-aws",
] }
alloy-primitives = "0.8"
alloy-provider = { version = "0.8", features = ["ws"] }
alloy-sol-types = "0.8"
aws-config = { version = "=1.8.13", features = ["rt-tokio", "credentials-login"] }
aws-sdk-kms = "1"

# Error handling
anyhow = "1.0"

# Utils
hex = "0.4"

# HTTP (used by alloy transport; needed for provider type alias)
reqwest = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto
sha3 = "0.10"
thiserror = "2.0"
# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
