[package]
name = "rebalancer"
version = "0.1.0"
edition = "2021"
description = "Inventory rebalancer service for multi-chain OIF solver deployments"
license = "MIT"

[[bin]]
name = "rebalancer"
path = "src/main.rs"

[dependencies]
alloy = { version = "1.0", features = [
    "full",
    "provider-http",
    "contract",
    "sol-types",
    "json-rpc",
    "rpc-types",
    "signer-aws",
] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.34", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
