[package]
name = "rebalancer"
version = "0.1.0"
edition = "2021"
description = "Inventory rebalancer service for multi-chain OIF solver deployments"
license = "MIT"

[[bin]]
name = "rebalancer"
path = "src/main.rs"

[dependencies]
alloy = { version = "1.0", features = [
    "full",
    "provider-http",
    "contract",
    "sol-types",
    "json-rpc",
    "rpc-types",
    "signer-aws",
] }
anyhow = "1.0"
aws-config = { version = "=1.8.13", features = ["rt-tokio", "credentials-login"] }
bech32 = "0.11"
clap = { version = "4.4", features = ["derive", "env"] }
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tokio = { version = "1.34", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
