[package]
name = "solver-cli"
version = "0.1.0"
edition = "2021"
description = "Unified CLI for OIF solver deployment, configuration, and execution"
license = "MIT"

[[bin]]
name = "solver-cli"
path = "src/main.rs"

[features]
default = ["solver-runtime"]
solver-runtime = ["solver-service", "solver-config"]
integration = []

[dependencies]

# Ethereum
alloy = { version = "1.0", features = [
    "full",
    "provider-http",
    "signer-local",
    "contract",
    "sol-types",
    "json-rpc",
    "rpc-types",
    "eips",
] }
anyhow = "1.0"
async-trait = "0.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
# CLI parsing
clap = { version = "4.4", features = ["derive", "env"] }
colored = "2.1"
dialoguer = "0.11"
dirs = "5.0"
dotenvy = "0.15"
hex = "0.4"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"

# Error handling
thiserror = "2.0"

# Async runtime
tokio = { version = "1.34", features = ["full"] }
toml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Unix process management
[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["signal", "process"] }
solver-config = { path = "../oif/oif-solver/crates/solver-config", optional = true }

# OIF solver components (optional, for solver runtime)
solver-service = { path = "../oif/oif-solver/crates/solver-service", optional = true }
rebalancer = { path = "../rebalancer" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
