[package]
name = "solver-cli"
version = "0.1.0"
edition = "2021"
description = "Unified CLI for OIF solver deployment, configuration, and execution"
license = "MIT"

[[bin]]
name = "solver-cli"
path = "src/main.rs"

[features]
default = ["solver-runtime"]
solver-runtime = [
    "solver-config",
    "solver-service",
    "alloy-primitives",
    "alloy-provider",
    "alloy-rpc-types",
    "alloy-sol-types",
    "sha3",
    "futures",
    "solver-account",
    "solver-account?/kms",
    "solver-core",
    "solver-delivery",
    "solver-discovery",
    "solver-order",
    "solver-pricing",
    "solver-settlement",
    "solver-storage",
    "solver-types",
]
integration = []

[dependencies]

# Ethereum
alloy = { version = "1.0", features = [
    "full",
    "provider-http",
    "signer-local",
    "signer-aws",
    "contract",
    "sol-types",
    "json-rpc",
    "rpc-types",
    "eips",
] }
anyhow = "1.0"
async-trait = "0.1"
aws-config = "1"
aws-sdk-kms = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
# CLI parsing
clap = { version = "4.4", features = ["derive", "env"] }
colored = "2.1"
dialoguer = "0.11"
dirs = "5.0"
dotenvy = "0.15"
hex = "0.4"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"

# Error handling
thiserror = "2.0"

# Async runtime
tokio = { version = "1.34", features = ["full"] }
toml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Unix process management
[target.'cfg(unix)'.dependencies]
alloy-primitives = { version = "1.0.37", features = ["std", "serde"], optional = true }
alloy-provider = { version = "1.0", optional = true }
alloy-rpc-types = { version = "1.0", optional = true }
alloy-sol-types = { version = "1.0.37", optional = true }
futures = { version = "0.3", optional = true }
nix = { version = "0.28", features = ["signal", "process"] }
rebalancer = { path = "../rebalancer" }
sha3 = { version = "0.10", optional = true }
solver-account = { git = "https://github.com/celestiaorg/oif-solver", rev = "2364b4d5bd6f2b77299fbcf2d1a921ce46923a6f", optional = true }
solver-config = { git = "https://github.com/celestiaorg/oif-solver", rev = "2364b4d5bd6f2b77299fbcf2d1a921ce46923a6f", optional = true }
solver-core = { git = "https://github.com/celestiaorg/oif-solver", rev = "2364b4d5bd6f2b77299fbcf2d1a921ce46923a6f", optional = true }
solver-delivery = { git = "https://github.com/celestiaorg/oif-solver", rev = "2364b4d5bd6f2b77299fbcf2d1a921ce46923a6f", optional = true }
solver-discovery = { git = "https://github.com/celestiaorg/oif-solver", rev = "2364b4d5bd6f2b77299fbcf2d1a921ce46923a6f", optional = true }
solver-order = { git = "https://github.com/celestiaorg/oif-solver", rev = "2364b4d5bd6f2b77299fbcf2d1a921ce46923a6f", optional = true }
solver-pricing = { git = "https://github.com/celestiaorg/oif-solver", rev = "2364b4d5bd6f2b77299fbcf2d1a921ce46923a6f", optional = true }
solver-service = { git = "https://github.com/celestiaorg/oif-solver", rev = "2364b4d5bd6f2b77299fbcf2d1a921ce46923a6f", optional = true }
solver-settlement = { path = "../solver-settlement", optional = true }
solver-storage = { git = "https://github.com/celestiaorg/oif-solver", rev = "2364b4d5bd6f2b77299fbcf2d1a921ce46923a6f", optional = true }
solver-types = { git = "https://github.com/celestiaorg/oif-solver", rev = "2364b4d5bd6f2b77299fbcf2d1a921ce46923a6f", features = ["oif-interfaces"], optional = true }

[dev-dependencies]
assert_cmd = "2.0"
mockall = "0.13"
predicates = "3.0"
solver-settlement = { path = "../solver-settlement", features = ["testing"] }
solver-storage = { git = "https://github.com/celestiaorg/oif-solver", rev = "2364b4d5bd6f2b77299fbcf2d1a921ce46923a6f", features = ["testing"] }
tempfile = "3.8"

