[package]
name = "solver-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
solver-config = { path = "../oif/oif-solver/crates/solver-config" }
# OIF solver dependencies
solver-service = { path = "../oif/oif-solver/crates/solver-service" }

# Runtime
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
