[package]
name = "solver-settlement"
version = "0.1.0"
edition = "2024"

[features]
testing = ["upstream-solver-settlement/testing"]

[dependencies]
upstream-solver-settlement = { package = "solver-settlement", git = "https://github.com/celestiaorg/oif-solver", rev = "2364b4d5bd6f2b77299fbcf2d1a921ce46923a6f" }
solver-storage = { git = "https://github.com/celestiaorg/oif-solver", rev = "2364b4d5bd6f2b77299fbcf2d1a921ce46923a6f" }
solver-types = { git = "https://github.com/celestiaorg/oif-solver", rev = "2364b4d5bd6f2b77299fbcf2d1a921ce46923a6f", features = ["oif-interfaces"] }
alloy-primitives = { version = "1.0.37", features = ["std", "serde"] }
alloy-provider = { version = "1.0" }
alloy-rpc-types = { version = "1.0" }
alloy-sol-types = { version = "1.0.37" }
async-trait = "0.1"
sha3 = "0.10"
serde_json = "1.0"
tokio = { version = "1", features = ["rt"] }
toml = "0.9"
tracing = "0.1"
