[package]
name = "solver-settlement-impls"
version = "0.1.0"
edition = "2024"

[features]
testing = ["upstream-solver-settlement/testing"]

[dependencies]
alloy-primitives = { version = "1.0.37", features = ["std", "serde"] }
alloy-provider = { version = "1.0" }
alloy-rpc-types = { version = "1.0" }
alloy-sol-types = { version = "1.0.37" }
async-trait = "0.1"
serde_json = "1.0"
sha3 = "0.10"
solver-storage = { git = "https://github.com/celestiaorg/oif-solver", branch = "jonas/fix-expose-api-server" }
solver-types = { git = "https://github.com/celestiaorg/oif-solver", branch = "jonas/fix-expose-api-server", features = ["oif-interfaces"] }
tokio = { version = "1", features = ["rt"] }
toml = "0.9"
tracing = "0.1"
upstream-solver-settlement = { package = "solver-settlement", git = "https://github.com/celestiaorg/oif-solver", branch = "jonas/fix-expose-api-server" }
